--- a/LuuBot-Sharp.csproj
+++ b/LuuBot-Sharp.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="DSharpPlus" Version="4.1.0" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.1.0" />
+    <PackageReference Include="DSharpPlus.Lavalink" Version="4.1.0" />
+    <PackageReference Include="DSharpPlus.VoiceNext" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
